feat(service): Add http service api
